@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="PhenotypeAnnotation pipeline  -- build Jan 13, 20232" />
+        <property name="version" value="PhenotypeAnnotation pipeline  -- build Apr 25, 2023" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
@@ -15,7 +15,7 @@
     </bean>
 
     <bean id="hpoPhenotype" class="edu.mcw.rgd.dataload.HPOPhenotypeImporter">
-        <property name="version" value="HPOPhenotypeImporter  -- build Apr 21, 2023" />
+        <property name="version" value="HPOPhenotypeImporter  -- build Apr 25, 2023" />
         <property name="fileURL" value="http://purl.obolibrary.org/obo/hp/hpoa/genes_to_phenotype.txt" />
         <property name="workDirectory" value="data" />
         <property name="owner" value="66" />
@@ -24,7 +24,5 @@
         <property name="evidenceCode" value="IAGP" />
         <property name="minFileSize" value="500000" /><!--min file size of compressed source file -->
         <property name="staleAnnotThreshold" value="5" /><!--in percent: if there are more annots to be deleted than the threshold, no annots will be deleted, and alert will be issued -->
-        <property name="unmappedPhenotypesFile" value="/tmp/unmapped_omim_to_rdo.txt" />
-        <property name="unmappedDiseasesFile" value="/tmp/unmapped_omim_to_rdo2.txt" />
     </bean>
 </beans>
