@@ -1,3 +1,6 @@
+Apr 25, 2023
+  human phenotype ontology: removed no longer used code
+
 Apr 21, 2023
   human phenotype ontology: NEW FORMAT (genes_to_phenotype.txt) -- they dropped last five columns from the source file
      * ncbi_gene_id [tab] gene_symbol [tab] hpo_id [tab] hpo_name
